--- a/crates/ferrous_core/Cargo.toml
+++ b/crates/ferrous_core/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
  # core types depend on simple math utilities; use the workspace version of glam
 [dependencies]
 glam = { workspace = true }
+wgpu = "23.0"
+anyhow = "1.0"
+thiserror = "1.0"
