--- a/crates/ferrous_renderer/Cargo.toml
+++ b/crates/ferrous_renderer/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 wgpu = "23.0"
 anyhow = "1.0"
 thiserror = "1.0"
+ferrous_core = { path = "../ferrous_core" }
+
+[dev-dependencies]
+pollster = "0.3"
+image = "0.24"
