--- a/crates/ferrous_core/Cargo.toml
+++ b/crates/ferrous_core/Cargo.toml
@@ -9,5 +9,6 @@ glam = { workspace = true }
 wgpu = "23.0"
 anyhow = "1.0"
 thiserror = "1.0"
-// needed for input types and later editor/event loop
-winit = "0.28"
+# needed for input types and later editor/event loop
+# (winit comments must use '#', not '//')
+winit = "0.30"
