Add ferrous_assets crate with binary reader and font parser utilities; update workspace configuration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/ferrous_renderer",
     "crates/ferrous_editor",
     "crates/ferrous_gui",
+    "crates/ferrous_assets",
 ]
 resolver = "2"
 
