feat: add font atlas support for text rendering
- Introduced a new `ferrous_assets` crate for managing font assets and generating font atlases.
- Implemented a test font generator in `ferrous_editor` to create a simple in-memory font.
- Enhanced `GuiRenderer` in `ferrous_gui` to support text rendering with a new `TextBatch` structure.
- Added a new shader for rendering text using multi-channel signed distance fields (MSDF).
- Updated the `Renderer` in `ferrous_renderer` to handle both UI quads and text quads in rendering passes.
- Integrated font atlas creation and management, allowing for dynamic text rendering in the editor.

--- a/crates/ferrous_assets/Cargo.toml
+++ b/crates/ferrous_assets/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# minimal dependencies, maybe none for now
+wgpu = "23.0"
+anyhow = "1.0"
+bytemuck = { version = "1.14", features = ["derive"] }
+
+[dev-dependencies]
+pollster = "0.3"
