--- a/crates/ferrous_assets/Cargo.toml
+++ b/crates/ferrous_assets/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 wgpu = "23.0"
 anyhow = "1.0"
 bytemuck = { version = "1.14", features = ["derive"] }
+rayon = "1.7"
 
 [dev-dependencies]
 pollster = "0.3"
