feat: Enhance GUI with new Canvas and ViewportWidget, improving input handling and focus management

--- a/crates/ferrous_gui/Cargo.toml
+++ b/crates/ferrous_gui/Cargo.toml
@@ -13,3 +13,9 @@ glam = "0.29"
 
 # font atlas generator lives in the assets crate
 ferrous_assets = { path = "../ferrous_assets" }
+
+# we expose some input-related helpers that rely on winit key codes;
+# adding a dependency here keeps the types available for users of the
+# GUI library. This is a lightweight crate and is already used by the
+# editor project.
+winit = "0.30"
