feat: Introduce ferrous_app crate and refactor editor to use new application framework
- Added a new `ferrous_app` crate to encapsulate application logic and window management.
- Refactored `EditorApp` to implement the `FerrousApp` trait, allowing for better separation of concerns.
- Updated the main entry point to utilize the new application framework for initialization and event handling.
- Enhanced UI handling by introducing a `Ui` struct that simplifies widget management and event routing.
- Improved input handling by integrating `InputState` directly into the UI framework.
- Added support for dynamic viewport management in the application context.
- Updated dependencies in `Cargo.toml` files to include the new `ferrous_app` crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/ferrous_editor",
     "crates/ferrous_gui",
     "crates/ferrous_assets",
+    "crates/ferrous_app",
 ]
 resolver = "2"
 
