fix: Correct comment formatting in build_docs.sh and ensure proper documentation site ignore in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ Thumbs.db
 # Ignore logs
 *.log
 
+# Ignore generated documentation site (built by CI)
+/site/
+
+
 # Ignore compiled binaries
 *.exe
 *.dll
