--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,12 +5,17 @@ site_url: https://jvchiappini.github.io/FerrousEngine
 theme:
   name: material
 
-# navigation is automatically generated from the docs/ folder structure
-# you can override entries here if you want custom titles or ordering
+## navigation is automatically generated from the docs/ folder structure
+## entries here give us control over ordering and grouping.  update
+## this list whenever you add new markdown files under `crates/*/docs`.
 nav:
   - Home: index.md
   - ferrous_gui:
-      - Overview: ferrous_gui/README.md
+    - Overview: ferrous_gui/README.md
+    - API:
+      - Core: ferrous_gui/api/core.md
+      - Layout: ferrous_gui/layout.md
+    - Widgets:
       - Button: ferrous_gui/widgets/button.md
       - Slider: ferrous_gui/widgets/slider.md
       - TextInput: ferrous_gui/widgets/textinput.md
