--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -8,6 +8,10 @@ name: "Build and Deploy Documentation"
 on:
   push:
     branches: [ main ]
+    # do not rebuild when only the generated docs change;
+    # avoids a push loop when we commit `docs/`
+    paths-ignore:
+      - 'docs/**'
   workflow_dispatch:
 
 jobs:
@@ -31,10 +35,15 @@ jobs:
           chmod +x scripts/build_docs.sh
           ./scripts/build_docs.sh
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site
-          # you can change 'publish_branch' to 'main' and use the
-          # docs/ folder instead if you prefer publishing from main
+      - name: Commit generated docs
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs
+          # create a commit only if something changed
+          git diff --quiet || git commit -m "Update generated docs [skip ci]"
+          git push origin HEAD:main
+
+      # (optional) if you still want to deploy to a separate branch,
+      # you could enable the peaceiris step here.  with Pages pointed at
+      # `main/docs` it is not necessary.
