--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -47,8 +47,10 @@ jobs:
       # write access; `paths-ignore` prevents re‑triggering this job.
       - name: Commit generated docs
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          # commit using the repo owner's identity so the bot does not
+          # appear as a contributor.
+          git config user.name "jvchiappini"
+          git config user.email "jvchiappini@users.noreply.github.com"
           git add docs
-          git diff --quiet || git commit -m "Update generated docs [skip ci]"
+          git diff --quiet || git commit --author="jvchiappini <jvchiappini@users.noreply.github.com>" -m "Update generated docs [skip ci]"
           git push origin HEAD:main
