feat: enhance AppContext with optional renderer reference and add convenience accessor feat: integrate new camera and controller structures into core scene management chore: update dependencies in Cargo.toml for core and editor crates refactor: improve cube positioning logic in EditorApp with random offsets refactor: remove obsolete camera module and integrate its functionality into core

--- a/crates/ferrous_editor/Cargo.toml
+++ b/crates/ferrous_editor/Cargo.toml
@@ -26,3 +26,6 @@ pollster = "0.3"
 # the winit integration in the editor binary later when it's needed.
 # Eguis removed; tendremos nuestro propio motor UI en ferrous_gui
 # egui = "0.29"
+
+# random helper for positioning cubes
+rand = "0.8"
