--- a/crates/ferrous_core/Cargo.toml
+++ b/crates/ferrous_core/Cargo.toml
@@ -16,3 +16,6 @@ winit = "0.30"
 # utility for lazy static initialization of the system handle
 once_cell = "1.18"
 sysinfo = "0.28"
+
+# used by camera uniform definitions
+bytemuck = "1.17"
